# tss-ecdsa-js

./: .gitignore  README.md  package-lock.json  package.json
native/: Cargo.toml
native/src/: lib.rs
native/src/party_i/: hd_keys.rs  keygen.rs  mod.rs  sign.rs
src/: bindings.ts  index.ts  utils.ts
tests/: basic.spec.ts  integration.spec.ts
